@@ -21,7 +21,7 @@ flow_law = 0
 isostasy = 2
 basal_water = 2
 sliding_law = 4
-slip_coeff = 1
+slip_coeff = 0
 marine_margin = 0
 stress_calc = 1
 evolution = 2
